kubernetes/manifests/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: passworm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
            - mountPath: /docker-entrypoint-initdb.d
              name: init-config
              readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: init-config
          emptyDir: {}
