kubernetes/manifests/passworm-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passworm
  namespace: passworm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: passworm
  template:
    metadata:
      labels:
        app: passworm
    spec:
      containers:
        - name: passworm
          image: ghcr.io/urskan/passworm-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: private-registry-auth
