kubernetes/manifests/test.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: passworm
spec:
  containers:
  - name: nginx
    image: nginx:stable-alpine
    ports:
    - containerPort: 80
