kubernetes/manifests/mailhog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: passworm
  labels:
    app: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      port: 1025
      targetPort: 1025
    - protocol: TCP
      port: 8025
      targetPort: 8025
  type: ClusterIP
