kubernetes/manifests/passworm-service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: passworm-v2
  namespace: passworm
  labels:
    app: passworm
    version: v2
spec:
  selector:
    app: passworm
    version: v2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
